--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,6 +1,6 @@
 .navMenu {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 10vh;
   background-color: purple;
@@ -10,7 +10,8 @@
   justify-content: space-between;
   text-decoration: none;
   list-style: none;
-  color: white;
+  font-size: 2rem;
+  // color: white;
 }
 .navItem {
   color: inherit;
